--- a/goit_python_web_fastapi_lect_01/static/client/index.html
+++ b/goit_python_web_fastapi_lect_01/static/client/index.html
@@ -30,16 +30,17 @@
           <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
       
           <div class="form-floating">
-            <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+            <input type="email" class="form-control" name="username"  id="username" placeholder="name@example.com">
             <label for="floatingInput">Email address</label>
           </div>
           <div class="form-floating">
-            <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+            <input type="password" class="form-control" name="password"  id="password" placeholder="Password">
             <label for="floatingPassword">Password</label>
           </div>
           <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
           <p class="mt-5 mb-3 text-muted">&copy; 2023</p>
         </form>
       </main>
+      <script src="js/main.js"></script>
 </body>
 </html>
