--- a/goit_python_web_fastapi_lect_01/static/client/index.html
+++ b/goit_python_web_fastapi_lect_01/static/client/index.html
@@ -21,7 +21,7 @@
       </style>
     <link href="css/signin.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
-    <title>Document</title>
+    <title>Cats index : Login</title>
 </head>
 <body class="text-center">
     <main class="form-signin">
