--- a/goit_python_web_fastapi_lect_01/static/client/main.html
+++ b/goit_python_web_fastapi_lect_01/static/client/main.html
@@ -29,6 +29,25 @@
           </ul>
         </div>
       </div>
+      <div class="row mt-3">
+        <div class="col-6">
+          <form id="ownerCreate">
+            <div class="mb-3">
+              <label for="owner_name" class="form-label"
+                >Enter email of owner</label
+              >
+              <input
+                type="email"
+                class="form-control"
+                id="owner_name"
+                name="email"
+                placeholder="name@example.com"
+              />
+            </div>
+            <button type="submit" class="btn btn-primary">Create</button>
+          </form>
+        </div>
+      </div>
     </div>
     <script src="js/app.js"></script>
   </body>
