JS Client as staic of FastAPI

--- a/goit_python_web_fastapi_lect_01/static/client/index.html
+++ b/goit_python_web_fastapi_lect_01/static/client/index.html
@@ -23,9 +23,9 @@
     <link href="css/styles.css" rel="stylesheet">
     <title>Cats index : Login</title>
 </head>
-<body class="text-center">
+<body class="text-center d-flex h-100 text-center text-white bg-dark" data-bs-theme="dark" >
     <main class="form-signin">
-        <form>
+        <form >
           <img class="mb-4" src="images/logo.svg" alt="" width="100" height="100">
           <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
       
