--- a/goit_python_web_fastapi_lect_01/static/client/main.html
+++ b/goit_python_web_fastapi_lect_01/static/client/main.html
@@ -12,9 +12,9 @@
     <title>Cats index</title>
   </head>
 
-  <body>
+  <body class="text-center d-flex h-100 text-center text-white bg-dark" data-bs-theme="dark" >
     <div class="container">
-      <h2 class="text-center mt-3 mb-3">Javasript client for CAT list</h2>
+      <h2 class="text-center mt-3 mb-3">Javasript client for displaying a list of cats and owners</h2>
       <div class="row mt-3">
         <div class="col-8">
           <h3>List of cats</h3>
@@ -30,11 +30,11 @@
         </div>
       </div>
       <div class="row mt-3">
-        <div class="col-6">
+        <div class="col-8">
           <form id="ownerCreate">
             <div class="mb-3">
               <label for="owner_name" class="form-label"
-                >Enter email of owner</label
+                >Enter email of new owner</label
               >
               <input
                 type="email"
@@ -47,6 +47,10 @@
             <button type="submit" class="btn btn-primary">Create</button>
           </form>
         </div>
+        <p class="mt-5">
+            <a href="/" class="btn btn-sm btn-secondary">Home</a>
+            <a href="index.html" class="btn btn-sm btn-secondary">Login</a>
+          </p>
       </div>
     </div>
     <script src="js/app.js"></script>
