--- a/goit_python_web_fastapi_lect_01/static/client/index.html
+++ b/goit_python_web_fastapi_lect_01/static/client/index.html
@@ -25,8 +25,8 @@
 </head>
 <body class="text-center d-flex h-100 text-center text-white bg-dark" data-bs-theme="dark" >
     <main class="form-signin">
-        <form >
-          <img class="mb-4" src="images/logo.svg" alt="" width="100" height="100">
+        <form class="mb-5">
+          <img class="mb-4" src="images/logo-2.png" alt="Logo Cats app" height="169">
           <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
       
           <div class="form-floating">
@@ -38,8 +38,11 @@
             <label for="floatingPassword">Password</label>
           </div>
           <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
-          <p class="mt-5 mb-3 text-muted">&copy; 2023</p>
         </form>
+        <p class="mt-5 mb-5">
+          <a href="/" class="btn btn-sm btn-secondary">Home</a>
+        </p>
+        <p class="mt-5 mb-3 text-muted">&copy; 2023</p>
       </main>
       <script src="js/main.js"></script>
 </body>
