--- a/goit_python_web_fastapi_lect_01/static/client/main.html
+++ b/goit_python_web_fastapi_lect_01/static/client/main.html
@@ -12,9 +12,14 @@
     <title>Cats index</title>
   </head>
 
-  <body class="text-center d-flex h-100 text-center text-white bg-dark" data-bs-theme="dark" >
+  <body
+    class="text-center d-flex h-100 text-center text-white bg-dark"
+    data-bs-theme="dark"
+  >
     <div class="container">
-      <h2 class="text-center mt-3 mb-3">Javasript client for displaying a list of cats and owners</h2>
+      <h2 class="text-center mt-3 mb-3">
+        Javasript client for displaying a list of cats and owners
+      </h2>
       <div class="row mt-3">
         <div class="col-8">
           <h3>List of cats</h3>
@@ -48,9 +53,9 @@
           </form>
         </div>
         <p class="mt-5">
-            <a href="/" class="btn btn-sm btn-secondary">Home</a>
-            <a href="index.html" class="btn btn-sm btn-secondary">Login</a>
-          </p>
+          <a href="/" class="btn btn-sm btn-secondary">Home</a>
+          <a href="index.html" class="btn btn-sm btn-secondary">Login</a>
+        </p>
       </div>
     </div>
     <script src="js/app.js"></script>
